<resources>
    <string name="app_name">MyDesigner</string>
    <string name="sign_up_now">Sign up Now</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="ice_bear">ICE BEAR</string>
</resources>
